merge from redsoft/master