@@ -1,7 +1,7 @@
 /*
  * ColumnIndexTableModel.java
  *
- * Copyright (C) 2002-2015 Takis Diakoumis
+ * Copyright (C) 2002-2017 Takis Diakoumis
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License
@@ -20,27 +20,29 @@
 
 package org.executequery.gui.browser;
 
+import org.executequery.localization.Bundles;
+
 import javax.swing.table.AbstractTableModel;
 
 /**
- *
- * @author   Takis Diakoumis
- * @version  $Revision: 1487 $
- * @date     $Date: 2015-08-23 22:21:42 +1000 (Sun, 23 Aug 2015) $
+ * @author Takis Diakoumis
  */
 public class ColumnIndexTableModel extends AbstractTableModel {
-    
-    /** The index data */
+
+    /**
+     * The index data
+     */
     private ColumnIndex[] data;
-    
-    private static final String[] header = {"", "Index Name", "Indexed Column", "Non-Unique"};
-    
-    public ColumnIndexTableModel() {}
-    
+
+    private static final String[] header = Bundles.get(ColumnIndexTableModel.class, new String[]{"", "IndexName", "IndexedColumn", "Non-Unique"});
+
+    public ColumnIndexTableModel() {
+    }
+
     public ColumnIndexTableModel(ColumnIndex[] data) {
         this.data = data;
     }
-    
+
     public void setIndexData(ColumnIndex[] data) {
         if (this.data == data) {
             return;
@@ -48,64 +50,65 @@ public class ColumnIndexTableModel extends AbstractTableModel {
         this.data = data;
         fireTableDataChanged();
     }
-    
+
     public int getRowCount() {
         if (data == null) {
             return 0;
         }
         return data.length;
     }
-    
+
     public int getColumnCount() {
         return header.length;
     }
-    
+
     public String getColumnName(int col) {
         return header[col];
     }
-    
+
     public boolean isCellEditable(int row, int col) {
         return false;
     }
-    
+
     public Object getValueAt(int row, int col) {
-        ColumnIndex cid = data[row];        
-        switch(col) {
+        ColumnIndex cid = data[row];
+        switch (col) {
             case 1:
                 return cid.getIndexName();
             case 2:
                 return cid.getIndexedColumn();
             case 3:
-                return new Boolean(cid.isNonUnique());
+                return Boolean.valueOf(cid.isNonUnique());
             default:
                 return null;
         }
     }
-    
+
     public void setValueAt(Object value, int row, int col) {
-        ColumnIndex cid = data[row];        
+        ColumnIndex cid = data[row];
         switch (col) {
             case 1:
-                cid.setIndexName((String)value);
+                cid.setIndexName((String) value);
                 break;
             case 2:
-                cid.setIndexedColumn((String)value);
+                cid.setIndexedColumn((String) value);
                 break;
             case 3:
-                cid.setNonUnique(((Boolean)value).booleanValue());
+                cid.setNonUnique(((Boolean) value).booleanValue());
                 break;
         }
-        
+
         fireTableRowsUpdated(row, row);
     }
-    
+
     public Class<?> getColumnClass(int col) {
         if (col == 3) {
             return Boolean.class;
         }
         return String.class;
     }
-    
-    
+
+
 }
+
 
